// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iAEyYk fQZuHz"
>
  <li
    className="sc-fsQiph kggDkj"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fsQiph kggDkj"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fsQiph kggDkj"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-fsQiph kggDkj"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iAEyYk fQZuHz"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iAEyYk fQZuHz"
>
  <li
    className="sc-fsQiph kggDkj"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fsQiph kggDkj"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fsQiph kggDkj"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
